--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
         <!-- Styling -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-        <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-        <title>Burger-matic</title>
+        <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Bungee" rel="stylesheet">
+        <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
+        <title>Burger-nator!</title>
     </head>
     <body>
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid text-center">
             <div class="container">
-                <h1 class="display-3">Burger-matic</h1>
+                <h1 class="display-3">Burger-nator!</h1>
                 <p class="lead">May your burger dreams come true...
                 </p>
             </div>
