changed the spelling of some words

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,11 +19,11 @@
         </div>
 
         <div class="middle col-md-4 col-md-offset-1">
-            <p>Add a burger to the burg-antor:</p>
+            <p>Add a burger to the burger-nator:</p>
             <div class="burger-adder">
                 <form action="/" method="POST">
                     <input type="text" name="burger_name"><br>
-                    <button type="submit">Burga-nate!</button>
+                    <button type="submit">Burger-nate!</button>
                 </form>
             </div>
         </div>
@@ -41,7 +41,7 @@
             {{/each}}
             <form action="/?_method=PUT" method="POST">
                 <input type="hidden" name="devoured" value="false">
-                <button type="submit">Re-burga-nate Me!</button>
+                <button type="submit">Re-burger-nate Me!</button>
             </form>
             <div class="bottom-bun"></div>
         </div>
